# MCCH

./: .gitignore  Cargo.toml  README.md  system.toml.example
crates/control-plane/: Cargo.toml
crates/control-plane/src/: audit.rs  bootstrap.rs  config.rs  context.rs  health.rs  lib.rs  pg_repository.rs  policy.rs  provider.rs  rate_limit.rs  redis_store.rs  repository.rs  security.rs  session.rs  sqlite_repository.rs  static_config.rs  tsdb.rs
crates/control-plane/tests/: access_check_tests.rs  bootstrap_config_tests.rs  config_tests.rs  context_tests.rs  repository_tests.rs  session_tests.rs  sqlite_repository_tests.rs  tsdb_tests.rs
crates/kernel/: Cargo.toml
crates/kernel-space/: Cargo.toml
crates/kernel-space/src/: discovery.rs  lib.rs  protocols.rs  providers.rs
crates/kernel-space/tests/: bundle_tests.rs  protocol_tests.rs  provider_tests.rs
crates/kernel/src/: forwarder.rs  guard.rs  lib.rs  selector.rs  types.rs
crates/kernel/tests/: forwarder_tests.rs  kernel_flow_tests.rs  selection_tests.rs
crates/mcch-server/: Cargo.toml
crates/mcch-server/assets/: app.js  index.html  styles.css
crates/mcch-server/src/: error.rs  handlers.rs  main.rs  state.rs  static_files.rs
crates/microkernel/: Cargo.toml
crates/microkernel/src/: lib.rs
crates/microkernel/tests/: microkernel_tests.rs
