[package]
name = "control-plane"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = { version = "2.6.0", features = ["serde"] }
parking_lot = "0.12.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sled = "0.34.7"
thiserror = "1.0.63"
toml = "0.8.19"
postgres = { version = "0.19.7", features = ["with-serde_json-1"] }
redis = "0.26"
rusqlite = { version = "0.31", features = ["bundled"] }
