[package]
name = "mcch-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
bytes = "1.7.1"
clap = { version = "4.5.18", features = ["derive"] }
cookie = "0.18"
include_dir = "0.7.4"
mime_guess = "2.0.5"
redis = "0.26"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "signal"] }
tokio-stream = "0.1.16"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.6.1", features = ["v4"] }

control-plane = { path = "../control-plane" }
kernel = { path = "../kernel" }
kernel-space = { path = "../kernel-space" }

